--- a/app/styles/sass/blocks/example-block.sass
+++ b/app/styles/sass/blocks/example-block.sass
@@ -49,9 +49,17 @@
   background-color: #FFF
   padding: 10px
   input
-    margin-bottom: 5px
+    margin-bottom: 10px
   input[type='button']
-    background-color: red
+    color: #FFF
+    width: 49%
+    background-color: green
+    &:last-child
+      background-color: #d9d4d4
 
-
+.sms-callback
+  width: 100%
+  text-align: center
+  font-size: 1.4em
+  color: red
 //.form-control
